increase heap and permgen for J2EE Preview server in WTP
svn path=/webdsl-editor/trunk/; revision=5218